Dev container updates
- Add runArgs to dev container to allow limiting CPU and memory
- Add stress tool to container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,10 @@
     "build": {
         "dockerfile": "Dockerfile"
     },
+    "runArgs": [
+        // "--cpuset-cpus=0-1", // Limit CPU usage
+        // "--shm-size=4gb" // Limit memory usage
+    ],
     // Configure tool-specific properties
     "customizations": {
         "vscode": {
