Revert "Cross test only cpp+swift on macOS"
This reverts commit 5d0edfe3abb7b26e0ee140e5400305d4dd4124b2.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
             test_flags: "--all-cross"
           - os: macos-15
             config: "cross"
-            test_flags: "--all-cross --filter cpp --filter swift"
+            test_flags: "--all-cross"
 
     runs-on: ${{ matrix.os }}
     steps:
