--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,10 @@ jobs:
           - os: ubuntu-24.04
             config: "cross"
             test_flags: "--all-cross"
+          - os: macos-15
+            config: "cross"
+            # We want to test C++ and Swift only (in each direction)
+            test_flags: "--all-cross --filter cpp --filter swift"
 
     runs-on: ${{ matrix.os }}
     steps:
