--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,10 +89,8 @@ jobs:
 
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
-
-      - name: Setup MATLAB
-        uses: ./.github/actions/setup-matlab
-        if: matrix.config == 'matlab'
+        with:
+          use_matlab: ${{ matrix.config == 'matlab' }}
 
       - name: Build ${{ matrix.config }} on ${{ matrix.os }}
         uses: ./.github/actions/build
