--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ on:
     branches: ["main"]
 
 jobs:
-  ci:
+  api-reference:
     runs-on: macos-15
     steps:
       - name: Checkout repository
@@ -30,7 +30,7 @@ jobs:
           brew install doxygen --formula || true
 
       - name: Install docfx for C# API reference
-        run: brew install docfx
+        run: dotnet tool install -g docfx
 
       - name: Build C++
         working-directory: ./cpp
