--- a/cpp/src/Slice/msbuild/slice.vcxproj
+++ b/cpp/src/Slice/msbuild/slice.vcxproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <ClCompile Include="..\FileTracker.cpp" />
     <ClCompile Include="..\Grammar.cpp" />
+    <ClCompile Include="..\MetadataValidator.cpp" />
     <ClCompile Include="..\Parser.cpp" />
     <ClCompile Include="..\Preprocessor.cpp" />
     <ClCompile Include="..\Scanner.cpp" />
@@ -104,6 +105,7 @@
     <ClInclude Include="..\FileTracker.h" />
     <ClInclude Include="..\Grammar.h" />
     <ClInclude Include="..\GrammarUtil.h" />
+    <ClInclude Include="..\MetadataValidator.h" />
     <ClInclude Include="..\Parser.h" />
     <ClInclude Include="..\Preprocessor.h" />
     <ClInclude Include="..\Util.h" />
