--- a/cpp/src/Slice/msbuild/slice.vcxproj.filters
+++ b/cpp/src/Slice/msbuild/slice.vcxproj.filters
@@ -17,230 +17,9 @@
   <ItemGroup>
     <ClCompile Include="..\FileTracker.cpp" />
     <ClCompile Include="..\Grammar.cpp" />
+    <ClCompile Include="..\MetadataValidator.cpp" />
     <ClCompile Include="..\Parser.cpp" />
     <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
-    <ClCompile Include="..\Scanner.cpp" />
-    <ClCompile Include="..\SliceUtil.cpp" />
-    <ClCompile Include="..\StringLiteralUtil.cpp" />
-    <ClCompile Include="..\CPlusPlusUtil.cpp" />
-    <ClCompile Include="..\FileTracker.cpp" />
-    <ClCompile Include="..\Grammar.cpp" />
-    <ClCompile Include="..\JavaUtil.cpp" />
-    <ClCompile Include="..\Parser.cpp" />
-    <ClCompile Include="..\PHPUtil.cpp" />
-    <ClCompile Include="..\Preprocessor.cpp" />
-    <ClCompile Include="..\Python.cpp" />
-    <ClCompile Include="..\PythonUtil.cpp" />
-    <ClCompile Include="..\Ruby.cpp" />
-    <ClCompile Include="..\RubyUtil.cpp" />
     <ClCompile Include="..\Scanner.cpp" />
     <ClCompile Include="..\SliceUtil.cpp" />
     <ClCompile Include="..\StringLiteralUtil.cpp" />
@@ -249,149 +28,9 @@
     <ClInclude Include="..\FileTracker.h" />
     <ClInclude Include="..\Grammar.h" />
     <ClInclude Include="..\GrammarUtil.h" />
+    <ClInclude Include="..\MetadataValidator.h" />
     <ClInclude Include="..\Parser.h" />
     <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
-    <ClInclude Include="..\Util.h" />
-    <ClInclude Include="..\CPlusPlusUtil.h" />
-    <ClInclude Include="..\FileTracker.h" />
-    <ClInclude Include="..\Grammar.h" />
-    <ClInclude Include="..\GrammarUtil.h" />
-    <ClInclude Include="..\JavaUtil.h" />
-    <ClInclude Include="..\Parser.h" />
-    <ClInclude Include="..\PHPUtil.h" />
-    <ClInclude Include="..\Preprocessor.h" />
-    <ClInclude Include="..\PythonUtil.h" />
-    <ClInclude Include="..\RubyUtil.h" />
     <ClInclude Include="..\Util.h" />
   </ItemGroup>
 </Project>
