--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,11 @@ jobs:
         with:
           use_matlab: ${{ matrix.config == 'matlab' }}
 
+      - name: Enable Linux core dumps
+        run: |
+          ulimit -c unlimited
+        if: runner.os == 'Linux'
+
       # See https://learn.microsoft.com/en-us/windows/win32/wer/collecting-user-mode-dumps
       - name: Enable Windows crash dumps
         run: |
@@ -127,6 +132,14 @@ jobs:
           path: ${{ matrix.working_directory || '.' }}/**/*.log
           if-no-files-found: ignore
         if: always()
+
+      - name: Upload Linux core dumps
+        uses: actions/upload-artifact@v4
+        with:
+          name: core-dumps-${{ matrix.config }}-${{ matrix.os }}
+          path: /var/lib/apport/coredump/*
+          if-no-files-found: ignore
+        if: runner.os == 'Linux' && always()
 
       - name: Upload macOS crash diagnostics
         uses: actions/upload-artifact@v4
