--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,9 @@ jobs:
 
       - name: Enable Linux core dumps
         run: |
-          ulimit -c unlimited
+          echo "ulimit -c unlimited" >> ~/.bashrc
+          echo "/tmp/core.%e.%p.%t.%h" > /proc/sys/kernel/core_pattern
+
         if: runner.os == 'Linux'
 
       # See https://learn.microsoft.com/en-us/windows/win32/wer/collecting-user-mode-dumps
@@ -137,7 +139,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: core-dumps-${{ matrix.config }}-${{ matrix.os }}
-          path: /var/lib/apport/coredump/*
+          path: /tmp/core.*
           if-no-files-found: ignore
         if: runner.os == 'Linux' && always()
 
