--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,6 +128,14 @@ jobs:
           if-no-files-found: ignore
         if: always()
 
+      - name: Upload Linux core dumps
+        uses: actions/upload-artifact@v4
+        with:
+          name: core-dumps-${{ matrix.config }}-${{ matrix.os }}
+          path: /var/lib/apport/coredump/*
+          if-no-files-found: ignore
+        if: runner.os == 'Linux' && always()
+
       - name: Upload macOS crash diagnostics
         uses: actions/upload-artifact@v4
         with:
