--- a/cpp/src/IceGrid/msbuild/icegridadmin/icegridadmin.vcxproj.filters
+++ b/cpp/src/IceGrid/msbuild/icegridadmin/icegridadmin.vcxproj.filters
@@ -94,6 +94,9 @@
     <ClCompile Include="x64\Release\Internal.cpp">
       <Filter>Source Files\x64\Release</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\XMLParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\IceGridAdmin.rc">
