--- a/cpp/src/IceGrid/msbuild/icegridregistry/icegridregistry.vcxproj
+++ b/cpp/src/IceGrid/msbuild/icegridregistry/icegridregistry.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="..\..\TraceLevels.cpp" />
     <ClCompile Include="..\..\Util.cpp" />
     <ClCompile Include="..\..\WellKnownObjectsManager.cpp" />
+    <ClCompile Include="..\..\XMLParser.cpp" />
     <ClCompile Include="Win32\Debug\IceLocatorDiscovery.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
