--- a/cpp/src/IceGrid/msbuild/icegridnode/packages.config
+++ b/cpp/src/IceGrid/msbuild/icegridnode/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="zeroc.icebuilder.msbuild" version="5.0.9" targetFramework="native" />
   <package id="zeroc.lmdb.v143" version="0.9.29" targetFramework="native" />
+  <package id="expat.v143" version="2.4.1.1" targetFramework="native" />
 </packages>
