--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -73,7 +73,7 @@ jobs:
         run: |
           dotnet tool install  dotnet-coverage --global
           dotnet-coverage collect --server-mode --background --session-id ice-coverage --output output.cobertura.xml --output-format cobertura
-          python3 allTests.py --all --dotnet-command "dotnet-coverage connect ice-coverage dotnet"
+          python3 allTests.py --all --coverage-session ice-coverage
           dotnet-coverage shutdown ice-coverage
 
       - name: Generate Coverage Reports
