Add Swift iOS testing to matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,14 +52,12 @@ jobs:
             test_flags: "--platform=x64 --config=Debug"
             msbuild_project: "msbuild/ice.proj"
 
-          # # Xcode SDK builds
-          # # TODO - Should we also test the debug config here as well?
-          # - macos-15
-          #   config: "xcodesdk"
-          #   working_directory: "cpp"
-          #   build_flags: "CONFIGS=xcodesdk PLATFORMS=iphonesimulator"
-          #   test_flags: "--config=xcodesdk --platform=iphonesimulator --controller-app"
-          #   build_cpp_and_python: true
+          - os: macos-15
+            config: "swift-ios"
+            working_directory: "swift"
+            build_flags: "PLATFORMS=all"
+            test_flags: "--platform=iphonesimulator --controller-app"
+            build_cpp_and_python: true
 
           # MATLAB
           - os: ubuntu-24.04
