--- a/swift/Makefile
+++ b/swift/Makefile
@@ -8,7 +8,7 @@ include $(top_srcdir)/config/Make.rules
 
 CONFIG ?= $(if $(filter $(OPTIMIZE),no),Debug,Release)
 
-SWIFT_BUILD_FLAGS ?= $(if $(V),,--quiet) --configuration  $(shell echo $(CONFIG) | tr '[:upper:]' '[:lower:]')
+SWIFT_BUILD_FLAGS ?= -Xswiftc -warnings-as-errors $(if $(V),,--quiet) --configuration  $(shell echo $(CONFIG) | tr '[:upper:]' '[:lower:]')
 
 # $(call make-xcodebuild-rule,$1=rule,$2=platform,$3=action)
 define xcode-test-app-rule
@@ -16,7 +16,6 @@ $1:: test/ios/TestDriverApp.xcodeproj
 	xcodebuild $(if $(V),,-quiet) \
 		-project test/ios/TestDriverApp.xcodeproj \
 		-scheme TestDriverApp \
-		-configuration $(CONFIG) \
 		-arch arm64 \
 		-sdk $2 $3
 
@@ -28,7 +27,7 @@ srcs::
 	$(Q)swift build $(SWIFT_BUILD_FLAGS)
 
 tests::
-	$(Q)swift build -Xswiftc -warnings-as-errors --package-path test $(SWIFT_BUILD_FLAGS)
+	$(Q)swift build --package-path test $(SWIFT_BUILD_FLAGS)
 
 install::
 	@echo nothing to install
